--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.6.1",
-    "antd": "^5.24.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "antd": "^5.11.3-alpha.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
